@@ -119,6 +119,11 @@ my %primroots = (
 1407827621 =>   2,
 1520874431 =>  17,
 1685283601 => 164,
+           40487 =>   5,
+"66366175781303" => 10,  # 40487^3
+                      6692367337 =>   5,
+"299736279805773674377900741753" => 7,   # 66366175781303^3
+
  100000001 => undef,  # Without an early exit, this will essentially hang.
 "2232881419280027" => 6,
 "14123555781055773271" => 6,
